Mobile - fixed content alignments, part 2

--- a/sass/modules/_alignments.scss
+++ b/sass/modules/_alignments.scss
@@ -24,4 +24,10 @@
 	    width: 100%;
 	}
 
+	.alignright {
+	    float: none;
+	    margin-left: 0;
+	    width: 100%;
+	}
+
 }
